aws/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-microservices
  labels:
    name: chat-microservices
